Add tracks for bandcamp search url
